# server

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
database/: __init__.py  answers.py  poll.py
endpoints/: __init__.py  account.py  answers.py  dependencies.py  poll.py  statistics.py
models/: __init__.py  account.py  answers.py  poll.py  settings.py
test/: __init__.py
utils/: page.py
